<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:hint="@string/etLogin"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_alignTop="@+id/buttonValidConnexion"
        android:text="@string/forgetpwd" />

    <Button
        android:id="@+id/buttonValidConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etPwd"
        android:layout_centerVertical="true"
        android:text="@string/validButton" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/etPwd"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/buttonValidConnexion"
        android:text="TextView" />

</RelativeLayout>
